# ai-context

./: .gitignore  README.md  ai-chat-test.py  old_project_context.txt  pyproject.toml  requirements.txt
.github/workflows/: release.yml
ai_context/: cli.py
ai_context/commands/: ai_watchdog.py  chat.py  compress.py  index.py  init.py  prompt.py  read_context.py  watchdog.py
ai_context/commands/source/: messages.py  settings.py
ai_context/source/: messages.py  settings.py
src/: .gitignore  README.md
src/ai_context/: cli.py
src/ai_context/commands/: ai_watchdog.py  chat.py  compress.py  index.py  init.py  prompt.py  read_context.py
src/ai_context/source/: messages.py
