[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-context"
version = "1.0.1"
description = "CLI tool to provide AI with context from your codebase"
authors = [{name = "Fire5125", email = "alexandr.krasnot@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
ai-context = "ai_context.cli:app"