[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-context"
version = "1.0.2"
description = "CLI tool to provide AI with context from your codebase"
authors = [{name = "Fire5125", email = "alexandr.krasnot@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.12.0",
    "loguru==0.7.3",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "openai==2.11.0",
    "pathspec==0.12.1",
    "pydantic==2.12.4",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "tiktoken==0.12.0",
    "tqdm==4.67.1",
    "typer==0.20.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.6.2",
    "watchdog==6.0.0",
    "win32_setctime==1.2.0"
]

[project.scripts]
ai-context = "ai_context.cli:app"